fix spacing

--- a/GRO3489/css/var01.css
+++ b/GRO3489/css/var01.css
@@ -7,14 +7,25 @@
 
 .page-header .multi-nights {
 	text-align: right;
-	margin-top: 0;
-	padding-right: 166px;
+	margin-top: 6px;
+	padding-right: 0;
 	padding-bottom: 0;
+	display: none;
 }
 
 @media only screen and (min-width: 664px) {
 	.multi-nights {
 		padding-right: 24px;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.page-header .multi-nights {
+		display: block;
+	}
+
+	.page-header .lead-price {
+		margin-top: -6px;
 	}
 }
 @media only screen and (min-width: 881px) {
